src/main/java/com/study/demo/test/jiekou/MyInterface2.java
package com.study.demo.test.jiekou;
public interface MyInterface2 {
    static void staticMethocd(){System.out.println("staticMethocd");}
    void dafaultMethocd();
//    void method(){};//error
    void method();
}
